compiler/src/test/resources/golden/errors/set_unshowable.dawn
use std/set

type Opaque = Mk(f: fn(Int) -> Int)

pub fn main() -> Unit !io = {
  let s = set.insert(set.empty(), Mk(fn(x) => x))
  println(to_string(s))
}
