compiler/src/test/resources/golden/errors/set_unshowable.err
error: cannot print a value of type Set[Opaque]
  --> set_unshowable.dawn:7:21
  |
7 |   println(to_string(s))
  |                     ^
  = hint: printable types are Int, Float, Bool, String, and `derive Show` values
